<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart shopping</string>

    <!-- ========= Registration Activity ========= -->
    <string name="reg_header_reg">Registration</string>
    <string name="reg_tv_empty_name">Name field is empty</string>
    <string name="reg_tv_empty_surname">Surname field is empty</string>
    <string name="reg_tv_empty_email">Email field is empty</string>
    <string name="reg_tv_empty_pass">Password field is empty</string>
    <string name="reg_tv_empty_pass2">Confirm password</string>
    <string name="reg_tv_pass_not_same">Passwords are not same</string>
    <string name="reg_tv_terms">You have to agree with terms</string>
    <string name="reg_tv_registration_process">Registration in process...</string>
    <string name="reg_tv_unexpected_response">Unexpected response from server</string>
    <string name="reg_tv_cant_parse_response">Can\'t parse server response from server</string>
    <string name="reg_tv_error">Registration error</string>
    <string name="reg_hint_name">Name</string>
    <string name="reg_hint_surname">Surname</string>
    <string name="reg_hint_email">Email</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_hint_password2">Confirm password</string>
    <string name="reg_cb_terms">I\'m agree with provided terms</string>
    <string name="reg_bt_reg">Registration</string>
    <string name="reg_toast_process">Registration in process...</string>

    <!-- ========= Login Activity ========= -->
    <string name="log_hint_email">Email</string>
    <string name="log_hint_password">Password</string>
    <string name="log_btn_login">Log in</string>
    <string name="log_btn_forgot_password">Forgot password?</string>

    <!-- ========= PasswordReset Activity ========= -->
    <string name="pwd_tv_provide_email">Please enter your email to search for your account</string>
    <string name="pwd_hint_email">Email</string>
    <string name="pwd_btn_reset_password">Reset password</string>

    <!-- ========= System constants ========= -->
    <string name="captcha_key">6LfmCEUUAAAAAEV2BlBvgfklqwUkedW0ueIj1uhK</string>

</resources>
