<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reg_header_reg"
        android:textSize="24sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_name"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:text="Alex" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_surname"
            android:inputType="textPersonName"
            android:maxLength="60"
            android:text="Nizhegorodtsev" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_mail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_email"
            android:inputType="textEmailAddress"
            android:text="a.nizhegorodtsev@gmail.com" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_password"
            android:inputType="textPassword"
            android:text="qwerty" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_password2"
            android:inputType="textPassword"
            android:text="qwerty" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_cb_terms" />
    <Button
        android:id="@+id/btn_registration"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registration"
        android:text="@string/reg_bt_reg" />

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
